pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-default-backend-per-host-custom-http-errors.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-default-backend-per-host-custom-http-errors
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/default-backend: whoami-b
    nginx.ingress.kubernetes.io/custom-http-errors: "404,415"

spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: whoami
      port:
        number: 80
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /foo
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
